Fixed missing padding at the bottom of control center pages in Firefox (#77)
Firefox currently ignores padding-bottom on overflow: auto/scroll elements:
https://bugzilla.mozilla.org/show_bug.cgi?id=748518

--- a/src/app/control-center/control-center.component.scss
+++ b/src/app/control-center/control-center.component.scss
@@ -38,16 +38,18 @@
       background-color: $sidebar-background;
     }
 
-    .main-page {
+    .main-page-container {
       flex: 1 1 auto;
-      height: 100%;
-
       box-sizing: border-box;
-      padding: 1.5rem 3rem;
+      height: 100%;
 
       overflow-y: auto;
 
       background-color: $page-background;
+
+      .main-page {
+        padding: 1.5rem 3rem;
+      }
     }
 
   }
